--- a/imagebazar/templates/imagebazar/home.html
+++ b/imagebazar/templates/imagebazar/home.html
@@ -1,8 +1,44 @@
-{% extends "base.html" %}
+{% extends "imagebazar/base.html" %}
 
 {% block content %}
 
-<h1>This is Home Page</h1>
+    <div class="mt-3">
+    </div>
+
+    <div class="row">
+        <div class="col-md-2">
+            
+            <div class="list-group">
+                <a href="/home" class="list-group-item list-group-item-action active">
+                  All Images
+                </a>
+                {% for c in category %}
+                <a href="/category/{{ c.id }}" class="list-group-item list-group-item-action">{{c.title}}</a>
+                {% endfor %}
+            </div>
+        </div>
+
+
+        <div class="col-md-10">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="card-columns">
+                        {% for i in images %}
+                        <div class="card" style="width: 18rem;">
+                            <img src="{{ i.image.url }}" class="card-img-top" alt="...">
+                            <div class="card-body .bg-info">
+                              <h5 class="card-title">{{ i.title }}</h5>
+                              <p class="card-text">{{ i.description }}</p>
+                              <a href="#" class="btn btn-primary">View</a>
+                            </div>
+                        </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
 
 
 {% endblock %}
